Link about section to navbar and fix about title alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,7 +29,7 @@ h4 {
   font-weight: 400;
   letter-spacing: 2px;
   text-transform: uppercase;
-  margin: 2rem 0;
+  margin: 2rem 1.5rem;
 }
 
 .section-flavour-text {
@@ -164,6 +164,10 @@ h4 {
    border: 2px solid red;
 } */
 
+#about {
+  background-color: white;
+  margin-bottom: 2rem;
+}
 
 
 /* Media queries */
@@ -224,7 +228,9 @@ h4 {
   }
 
   /* About section */
+
   #about .section-description {
+    margin-bottom: 4rem;
     align-self: end;
   }
 
